# shrimpvid_bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
src/: bot.py  buttons.py  config.py  main.py  messages.py  process_link_video.py  process_video.py  task_utils.py  tasks.py  utils.py
